Revision history for Perl module Alien::SDL

1.402  Fri Apr 30 2010
     - header tests: stdio.h is only included on windows boxes [#127] [FROGGS]
     - disabling audio support on solaris in case sys/audioio.h is missing [#125] [FROGGS]

1.401  Wed Apr 28 2010
     - print chosen build-option when calling ./Build (for cpantesters reports) [FROGGS]
     - Build-script is not created when choosing quit [FROGGS]
     - there should be no cpantester result (NA/UNKNOWN) sent when choosing quit [kmx]

1.4  Tue Apr 27 2010
     - alternative locations/hosts for fetching libs [FROGGS]
     - reenabling option #1 (using already installed libs) [FROGGS]

1.3  Fri Apr 23 2010
     - additional libs can be specyfied via Alien::SDL->config('libs', [-lAdd_Lib]) [FROGGS]
     - checking for required shared libs, disabling options if missing [FROGGS]
	 - png, jpeg and tiff are build always [FROGGS]
     - building zlib-1.2.5 instead of 1.2.4 [FROGGS]
     - making the RECOMMENDED option default [FROGGS]

1.2
     - build_requires fixed (now contains also modules needed for ./Build test)
     - Win32 patch - proper handling of spaces in dirname [FROGGS]
     - Better detection of patch utility (now works with old patch on bsd systems) [kmx]
     - GNU make autodetection (on bsd systems make!=GNU-make) [kmx]
     - SDL_Pango special patch now defines SDL_PANGO_FB [kthakore]
     - more diagnostics in t/001_load.t
     - improved patching mechanism (better CRLF/LF handling) [FROGGS]
     - Win/32bit binaries (with SDL_Pango patch) [FROGGS]
     - MacOSx file find bug fixed

1.1
     - Powerpc fixes [ioanrogers]
     - fix for many failing MacOS CPAN tester reports [kmx]
     - updated packages (zlib-1.2.4, jpeg-8a, libpng-1.4.1, freetype-2.3.12) in src build [kmx]
     - new Win32 binaries by FROGGS (now works well on WinXP & Win7)
     - typo fixes [dorkfish]

1.0 
     - TODO for 1.0 release has been met so incrementing 

0.9.1